attached_assets/Pasted-Run-npm-run-test-fanoo2-backend-1-0-0-test-npm-run-build-node-r-tsconfig-paths-register-di-1752251640131_1752251640131.txt
Run npm run test

> @fanoo2/backend@1.0.0 test
> npm run build && node -r tsconfig-paths/register dist/index.js --health


> @fanoo2/backend@1.0.0 build
> tsc -p tsconfig.json 2>&1 | tee tsc-errors.log || true

Error: server/storage.ts(277,11): error TS2322: Type '{ id: number; lastUpdated: Date; name: string; type: string; description: string; emoji: string; provider: string; status?: string | undefined; config?: any; }' is not assignable to type '{ id: number; name: string; type: string; description: string; status: string; config: unknown; emoji: string; provider: string; lastUpdated: Date | null; }'.
  Types of property 'status' are incompatible.
    Type 'string | undefined' is not assignable to type 'string'.
      Type 'undefined' is not assignable to type 'string'.
Error: server/storage.ts(332,23): error TS18047: 'b.timestamp' is possibly 'null'.
Error: server/storage.ts(332,47): error TS18047: 'a.timestamp' is possibly 'null'.
Error: server/storage.ts(338,11): error TS2322: Type '{ id: number; timestamp: Date; title: string; type?: string | undefined; }' is not assignable to type '{ id: number; type: string; title: string; timestamp: Date | null; }'.
  Types of property 'type' are incompatible.
    Type 'string | undefined' is not assignable to type 'string'.
      Type 'undefined' is not assignable to type 'string'.
Error: shared/schema.ts(89,34): error TS2344: Type 'ZodObject<{ password: ZodString; username: ZodString; }, { out: {}; in: {}; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{ password: ZodString; username: ZodString; }, { out: {}; in: {}; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
Error: shared/schema.ts(90,35): error TS2344: Type 'ZodObject<{ name: ZodString; type: ZodString; description: ZodString; status: ZodOptional<ZodString>; config: ZodOptional<ZodType<any, unknown, $ZodTypeInternals<any, unknown>>>; emoji: ZodString; provider: ZodString; }, { ...; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{ name: ZodString; type: ZodString; description: ZodString; status: ZodOptional<ZodString>; config: ZodOptional<ZodType<any, unknown, $ZodTypeInternals<any, unknown>>>; emoji: ZodString; provider: ZodString; }, { ...; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
Error: shared/schema.ts(91,35): error TS2344: Type 'ZodObject<{ name: ZodString; description: ZodString; status: ZodOptional<ZodString>; progress: ZodOptional<ZodInt>; order: ZodInt; }, { ...; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{ name: ZodString; description: ZodString; status: ZodOptional<ZodString>; progress: ZodOptional<ZodInt>; order: ZodInt; }, { ...; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
Error: shared/schema.ts(92,40): error TS2344: Type 'ZodObject<{ name: ZodString; status: ZodOptional<ZodString>; isPrivate: ZodOptional<ZodBoolean>; }, { out: {}; in: {}; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{ name: ZodString; status: ZodOptional<ZodString>; isPrivate: ZodOptional<ZodBoolean>; }, { out: {}; in: {}; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
Error: shared/schema.ts(93,37): error TS2344: Type 'ZodObject<{ name: ZodString; status: ZodOptional<ZodString>; }, { out: {}; in: {}; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{ name: ZodString; status: ZodOptional<ZodString>; }, { out: {}; in: {}; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
Error: shared/schema.ts(94,38): error TS2344: Type 'ZodObject<{ type: ZodOptional<ZodString>; title: ZodString; }, { out: {}; in: {}; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{ type: ZodOptional<ZodString>; title: ZodString; }, { out: {}; in: {}; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
Error: shared/schema.ts(95,38): error TS2344: Type 'ZodObject<{ description: ZodString; status: ZodOptional<ZodString>; fromAgent: ZodString; toAgent: ZodString; artifact: ZodString; }, { ...; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{ description: ZodString; status: ZodOptional<ZodString>; fromAgent: ZodString; toAgent: ZodString; artifact: ZodString; }, { ...; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
Error: shared/schema.ts(96,40): error TS2344: Type 'ZodObject<{ inputText: ZodString; resultJson: ZodType<any, unknown, $ZodTypeInternals<any, unknown>>; }, { out: {}; in: {}; }>' does not satisfy the constraint 'ZodType<any, any, any>'.
  Type 'ZodObject<{ inputText: ZodString; resultJson: ZodType<any, unknown, $ZodTypeInternals<any, unknown>>; }, { out: {}; in: {}; }>' is missing the following properties from type 'ZodType<any, any, any>': _type, _parse, _getType, _getOrReturnCtx, and 7 more.
Error: vite.config.ts(2,19): error TS2307: Cannot find module '@vitejs/plugin-react' or its corresponding type declarations.
Error: vite.config.ts(4,33): error TS2307: Cannot find module '@replit/vite-plugin-runtime-error-modal' or its corresponding type declarations.
Error: vite.config.ts(16,24): error TS2307: Cannot find module '@replit/vite-plugin-cartographer' or its corresponding type declarations.
node:internal/modules/esm/resolve:275
    throw new ERR_MODULE_NOT_FOUND(
          ^

Error [ERR_MODULE_NOT_FOUND]: Cannot find module '/home/runner/work/backend/backend/dist/server/index' imported from /home/runner/work/backend/backend/dist/index.js
    at finalizeResolution (node:internal/modules/esm/resolve:275:11)
    at moduleResolve (node:internal/modules/esm/resolve:860:10)
    at defaultResolve (node:internal/modules/esm/resolve:984:11)
    at ModuleLoader.defaultResolve (node:internal/modules/esm/loader:780:12)
    at #cachedDefaultResolve (node:internal/modules/esm/loader:704:25)
    at ModuleLoader.resolve (node:internal/modules/esm/loader:687:38)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:305:38)
    at ModuleJob._link (node:internal/modules/esm/module_job:175:49) {
  code: 'ERR_MODULE_NOT_FOUND',
  url: 'file:///home/runner/work/backend/backend/dist/server/index'
}

Node.js v22.17.0
Error: Process completed with exit code 1.